--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
       <section class="headline">
         <h1>Hey there. I'm Alex.</h1>
         <h2>I'm a software developer</h2>
-        <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+        <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
           don’t hestiate to contact me.</p>
-
         <ul>
           <li>
             <a href="#" class="github-icon"></a>
@@ -45,10 +44,12 @@
             <a href="#" class="medium-icon"></a>
           </li>
         </ul>
+        <button type="button" name="button"></button>
+
       </section>
 
       <section class="works">
-        <h1>My Recent Works</h1>
+        <h2>My Recent Works</h2>
         <div>
           <div class="card">
             <h3>Multi-Posts Stories Gain+Glory</h3>
@@ -65,7 +66,7 @@
               <li>
                 <a href="#">HTML</a>
               </li>
-              <button></button>
+              <button>See Project</button>
             </ul>
           </div>
           <div class="card">
@@ -83,7 +84,7 @@
               <li>
                 <a href="#">HTML</a>
               </li>
-              <button></button>
+              <button>See Project</button>
             </ul>
           </div>
           <div class="card">
@@ -101,7 +102,7 @@
               <li>
                 <a href="#">HTML</a>
               </li>
-              <button></button>
+              <button>See Project</button>
             </ul>
           </div>
           <div class="card">
@@ -119,7 +120,7 @@
               <li>
                 <a href="#">HTML</a>
               </li>
-              <button></button>
+              <button>See Project</button>
             </ul>
           </div>
           <div class="card">
@@ -137,7 +138,7 @@
               <li>
                 <a href="#">HTML</a>
               </li>
-              <button></button>
+              <button>See Project</button>
             </ul>
           </div>
           <div class="card">
@@ -155,25 +156,124 @@
               <li>
                 <a href="#">HTML</a>
               </li>
-              <button></button>
+              <button>See Project</button>
             </ul>
           </div>
         </div>
       </section>
 
       <section class="about">
-        
+        <h2>About me</h2>
+        <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
+don’t hestiate to contact me.</p>
+        <button type="button" name="button">Get My Resume</button>
+        <div class="">
+          <div class="about-card">
+            <img src="" alt="">
+            <h3>Languages</h3>
+            <ul>
+              <li>
+                <a href="#">JavaScript</a>
+              </li>
+              <li>
+                <a href="#">Ruby</a>
+              </li>
+              <li>
+                <a href="#">Html</a>
+              </li>
+              <li>
+                <a href="#">Css</a>
+              </li>
+            </ul>
+          </div>
+          <div class="about-card">
+            <img src="" alt="">
+            <h3>Frameworks</h3>
+            <ul>
+              <li>
+                <a href="#">Bootstrap</a>
+              </li>
+              <li>
+                <a href="#">Ruby on rails</a>
+              </li>
+              <li>
+                <a href="#">RSpec</a>
+              </li>
+              <li>
+                <a href="#">Capybara</a>
+              </li>
+              <li>
+                <a href="#">Selenium</a>
+              </li>
+            </ul>
+          </div>
+          <div class="about-card">
+            <img src="" alt="">
+            <h3>Skills</h3>
+            <ul>
+              <li>
+                <a href="#">Codekit</a>
+              </li>
+              <li>
+                <a href="#">GitHub</a>
+              </li>
+              <li>
+                <a href="#">Codepen</a>
+              </li>
+              <li>
+                <a href="#">Gitlab</a>
+              </li>
+              <li>
+                <a href="#">Terminal</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <section class="contact">
-
+        <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <form class="" action="index.html" method="post">
+          <ul>
+            <li>
+              <input type="name" placeholder="First Name" name="" value="">
+            </li>
+            <li>
+              <input type="name" placeholder="Last Name" name="" value="">
+            </li>
+            <li>
+              <input type="email" placeholder="Email address"name="" value="">
+            </li>
+            <li>
+              <input type="text" placeholder="Typing something" name="" value="">
+            </li>
+          </ul>
+          <button type="button" name="button">Get in touch</button>
+        </form>
       </section>
     </main>
 
     <footer>
+      <ul>
+        <li>
+          <a href="#" class="github-icon"></a>
+        </li>
+        <li>
+          <a href="#" class="linkedin-icon"></a>
+        </li>
+        <li>
+          <a href="#" class="angelist-icon"></a>
+        </li>
+        <li>
+          <a href="#" class="twitter-icon"></a>
+        </li>
+        <li>
+          <a href="#" class="medium-icon"></a>
+        </li>
+      </ul>
 
     </footer>
-    
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
