--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <ul>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item" ><a href="#">Portfolio</a></li>
+            <li class="nav-item" ><a href="#">About</a></li>
+            <li class="nav-item" ><a href="#">Contact</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
