Add test comment in index.html

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ don’t hestiate to contact me.</p>
           <a href="#" class="medium-icon"></a>
         </div>
       </div>
-
+<!-- This is a test comment! -->
     </footer>
 
 
